# phylum-types

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: test.yml
src/: lib.rs
src/ecosystems/: maven.rs
src/types/: auth.rs  common.rs  group.rs  job.rs  mod.rs  package.rs  preferences.rs  project.rs  user_settings.rs
src/types/cli/: common.rs  job.rs  mod.rs  project.rs  user_settings.rs
