[package]
name = "phylum_common"
description = "Common public types shared between the Phylum CLI and API"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "^0.4.6"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
