[package]
name = "phylum_types"
description = "Common public types shared between the Phylum CLI and API"
version = "0.1.0"
authors = ["Phylum, Inc. <engineering@phylum.io>"]
license = "MIT"
edition = "2018"

[dependencies]
chrono = { version = "0.4.11", default-features = false, features = ["serde"] }
purl = "0.1.1"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "1.0"
uuid = { version = "1.1.2", features = ["serde"] }
